# stacktach-simport

./: .gitignore  .gitreview  README.md  setup.cfg  tox.ini
simport/: __init__.py  simport.py
tests/: localmodule.py  test_simport.py
