[metadata]
name = simport
version = 0.2
author = Dark Secret Software Inc.
author-email = admin@darksecretsoftware.com
summary = simple import with python path management
description-file = README.md
license = Apache-2
classifier =
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Software Development :: Libraries :: Python Modules
home-page = https://github.com/stackforge/stacktach-simport
keywords =
    import
[files]
packages =
    simport
